Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,61 +1,59 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "5730836852:AAGwUccA9SZ9Uc8FALSe83-XQupwopdR_Xs"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+OWNER_ID = "5949886448"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
 IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API = "20708863"
+TELEGRAM_HASH = "4cf98990e2966e742025050d06f8c37b"
 
 # OPTIONAL CONFIG
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
+DATABASE_URL = "mongodb+srv://hmzl:hmzl@hmzl.sunhhpf.mongodb.net/?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001809592622"
+SUDO_USERS = "5663940136"
+IGNORE_PENDING_REQUESTS = "False"
 USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://hamzaleech.hamzabrodcfan.workers.dev/0:/"
 STATUS_LIMIT = "2" #recommended value 2
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "True"
 
 #TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+LEECH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+ANILIST_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WAYBACK_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MEDIAINFO_ENABLED = "True"          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+SET_BOT_COMMANDS = "True" 
 
 # Update
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
 
 #PM SUPPORT
-BOT_PM = ""
-FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
+BOT_PM = "True"
+FORCE_BOT_PM = "True"   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = 
-LEECH_LOG_URL = ""
-LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
+LEECH_LOG = "-1001788273356"
+LEECH_LOG_URL = "https://t.me/+A4dATKe-M54xMDI1"
+LEECH_LOG_INDEXING = "True"  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
 
 #Mirror
-MIRROR_LOGS = 
-MIRROR_LOG_URL = ""
-LINK_LOGS = 
+ENABLE_USR_TD = "True"
+MIRROR_LOGS = "-1001788273356"
+MIRROR_LOG_URL = "https://t.me/+A4dATKe-M54xMDI1"
+LINK_LOGS = "-1001788273356"
 
 #Other
 TG_SPLIT_SIZE = ""
@@ -103,11 +101,11 @@ SHORTENER = ""
 SHORTENER_API = ""
 
 # GDTOT COOKIE
-CRYPT = ""
+CRYPT = "UVAyL2dkVUFFb3ZPRWdzbUFpMXRkRGtMbDlHdDA0UmFiOE85TVFzZGVpQT0%3D"
 
 # UNIFIED LOGIN (AppDrive, DriveApp, GDFlix, DriveBit, DriveLinks, DriveSharer, DriveAce, DrivePro)
-UNIFIED_EMAIL = ""
-UNIFIED_PASS = ""
+UNIFIED_EMAIL = "hamzabrodcfan@gmail.com"
+UNIFIED_PASS = "Hamza@dc23"
 
 # HUBDRIVE COOKIES
 HUBDRIVE_CRYPT = ""
@@ -119,8 +117,8 @@ KATDRIVE_CRYPT = ""
 DRIVEFIRE_CRYPT = ""
 
 # Limits  
-TOTAL_TASKS_LIMIT = ""
-USER_TASKS_LIMIT = ""
+TOTAL_TASKS_LIMIT = "20"
+USER_TASKS_LIMIT = "10"
 STORAGE_THRESHOLD = ""
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
@@ -136,10 +134,10 @@ UN_FINISHED_PROGRESS_STR = '○' # '□'
 
 # THEME
 EMOJI_THEME = ""      #Default is False
-SHOW_LIMITS_IN_STATS = ""   #Default is false 
+SHOW_LIMITS_IN_STATS = "True"   #Default is false 
 
 #VIEW STYLE
-TELEGRAPH_STYLE = ""     #Default is False
+TELEGRAPH_STYLE = "True"     #Default is False
 
 #BRANDING
 CREDIT_NAME = "" 
@@ -161,8 +159,8 @@ CAPTION_FONT = ""     # Default Caption of Leeched files, Available Options : b,
 
 # Buttons
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
-SOURCE_LINK = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
 START_BTN2_NAME = ""
